--- a/index.html
+++ b/index.html
@@ -208,9 +208,9 @@ sonido.src="audio/Beeps.mp3";
     var nativeShare = function() {
        if (navigator.share) { 
           navigator.share({
-             title: "titulo",
-             text: "texto",
-             url: "URL", 
+             title: "Radio Cristiana Omega",
+             text: "Buena Música y Palabra de Dios",
+             url: "https://thenweb.github.io/radiomegaonline", 
           }) 
        }
        return false;
