codificado html e imagenf

--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@ sonido.src="audio/Beeps.mp3";
     <img class="btnimg1" src="img/Facebook.png" width="40px" height="40px" alt="Facebook"/></a>
   &nbsp;
  
-  <a href="javascript:agregar()">
-      <img class="btnimg1" src="img/favoritos.png" width="40px" height="40px" alt="Favoritos" title="Favorito" onmousedown="sonido.play()"></a>
+  <a href="https://www.biblia.es/nueva-version-internacional.php" target="_blank" title="Leer Bíblia">
+      <img class="btnimg1" src="img/libro1.png" width="40px" height="40px" alt="Leer Biblia" title="Leer Bíblia" onmousedown="sonido.play()"></a>
    	
   &nbsp;
   
