codificado del index

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"
 />
-    <title>Radio Cristina Omega</title>
+    <title>Radio Cristiana Omega</title>
     <link rel="icon" type="image/png" href="img/cover.png" />
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/animate.css">
@@ -209,7 +209,7 @@ sonido.src="audio/Beeps.mp3";
        if (navigator.share) { 
           navigator.share({
              title: "Radio Cristiana Omega",
-             text: "Buena Música y Palabra de Dios",
+             text: "Buena Música y Palabra de Dios. Añada acceso directo a la Pantalla de Inicio de tu Móvil",
              url: "https://thenweb.github.io/radiomegaonline", 
           }) 
        }
