--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ sonido.src="audio/Beeps.mp3";
     <img class="btnimg1"   src="img/Whatsapp.png" width="40px"  height="40px" alt="Whatsapp:"/></a> 
   &nbsp;
 
-  <a href="https://www.facebook.com/profile.php?id=100077660078810&mibextid=ZbWKwL" target="_blank" title="Facebook" onmousedown="sonido.play()">
+  <a href="https://www.facebook.com/emisora.omegaestereo.9" target="_blank" title="Facebook" onmousedown="sonido.play()">
     <img class="btnimg1" src="img/Facebook.png" width="40px" height="40px" alt="Facebook"/></a>
   &nbsp;
  
